--- a/config/_default/_languages.toml
+++ b/config/_default/_languages.toml
@@ -1,6 +1,6 @@
 # Rename this file to languages.toml to enable multilingual support
-[en]
-languageName = "English"
+[zh-cn]
+languageName = "汉语"
 languagedirection = "ltr"
-title = "Example Site"
+title = "Roses"
 weight = 1
