--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -9,16 +9,32 @@
 
 [[social]]
 identifier = "github"
-name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+name = "Github"
+url = "https://github.com/RossQAQ"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "bilibili"
+name = "Bilibili"
+url = "https://space.bilibili.com/3078464"
 
 [social.params]
-icon = "brand-twitter"
+icon = "brand-bilibili"
+
+[[social]]
+identifier = "netease-music"
+name = "网易云音乐"
+url = "https://music.163.com/playlist?id=109571638&userid=93740300"
+
+[social.params]
+icon = "brand-netease-music"
+
+[[social]]
+identifier = "mail"
+name = "邮件"
+url = "mailto:rossqaq@outlook.com"
+
+[social.params]
+icon = "brand-email"
