--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,7 +1,7 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
+baseurl = "https://rossqaq.github.io/"
 languageCode = "zh-cn"
-paginate = 5
+paginate = 10
 title = "Roses"
 
 # Theme i18n support
